Refactor css and added media query for contact us

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -61,7 +61,10 @@
     </section>
     
     <section id="collection">
-        <div class="collections container">
+        <div class="header">
+            <h2>Food Category</h2>
+        </div>
+        <div class="collections ">
             <div class="content">
                 <img src="{% static 'img/dish.png' %}" alt="img" />
                 <div class="img-content">
@@ -93,9 +96,37 @@
         </div>
     </section>
     <section id="foods">
-        <div class="seller container">
+        <div class="header">
             <h2>Top Sales</h2>
+        </div>
+        <div class="seller container">
             <div class="best-seller">
+                <div class="best-p1">
+                    <img src="{% static 'img/foods/masiram.jpg' %}" alt="img">
+                    <div class="best-p1-txt">
+                        <div class="name-of-p">
+                            <p>Basta Masiram</p>
+                        </div>
+                        <div class="rating">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <div class="price">
+                            &#8369; 80.00
+                            <div class="colors">
+                                <i class='bx bxs-circle red'></i>
+                                <i class='bx bxs-circle blue'></i>
+                                <i class='bx bxs-circle white'></i>
+                            </div>
+                        </div>
+                        <div class="buy-now">
+                            <button><a href="#">Buy  Now</a></button>
+                        </div>
+                    </div>
+                </div>
                 <div class="best-p1">
                     <img src="{% static 'img/foods/masiram.jpg' %}" alt="img">
                     <div class="best-p1-txt">
