--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -5,6 +5,15 @@
     box-sizing: border-box;
 }
 
+:root {
+    --primary-color: #ff3c78;
+    --light-black: rgba(0, 0, 0, 0.89);
+    --black: #000;
+    --white: #fff;
+    --grey: #aaa;
+    --spacer: 2rem;
+}
+
 body {
     font-family: "Poppins", sans-serif;
 }
@@ -13,14 +22,15 @@ body {
     max-width: 1200px;
     width: 90%;
     margin: 0 auto;
+    overflow-x: auto;
+    padding: var(--spacer) var(--spacer);
 }
 
-:root {
-    --primary-color: #ff3c78;
-    --light-black: rgba(0, 0, 0, 0.89);
-    --black: #000;
-    --white: #fff;
-    --grey: #aaa;
+.header {
+    max-width: 1200px;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: var(--spacer);
 }
 
 .top-txt {
@@ -284,7 +294,6 @@ body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 65px;
 }
 
 .content {
@@ -420,6 +429,7 @@ body {
 .seller .best-p1 {
     width: 250px;
     height: 370px;
+    margin-right: 10px;
 }
 
 .seller .best-p1 img {
@@ -693,3 +703,40 @@ iframe {
     }
 }
 
+@media (max-width: 500px) {
+    .form {
+        display: flex;
+        flex-direction: column;
+    }
+    .form .form-details button {
+        margin-left: 0;
+    }
+    .form .form-details input[type="text"],
+    .form .form-details input[type="email"],
+    .form .form-details textarea {
+        width: 100%;
+        margin-left: 0;
+    }
+    .form .form-details input[type="text"] {
+        margin-bottom: 0px;
+    }
+}
+
+@media(min-width: 501px) and (max-width: 768px) {
+    .form {
+        display: flex;
+        flex-direction: column;
+    }
+    .form .form-details button {
+        margin-left: 0;
+    }
+    .form .form-details input[type="text"],
+    .form .form-details input[type="email"],
+    .form .form-details textarea {
+        width: 100%;
+        margin-left: 0;
+    }
+    .form .form-details input[type="text"] {
+        margin-bottom: 0px;
+    }
+}
