Added login and registration UI

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -19,8 +19,8 @@
                 <p>Welcome to our customer ordering management system, were happy to serve you.</p>
             </div>
             <div class="sing_in_up ">
-                <a href="# ">SIGN IN</a>
-                <a href="# ">SIGN UP</a>
+                <a href="{% url 'login' %}">SIGN IN</a>
+                <a href="{% url 'register' %}">SIGN UP</a>
             </div>
         </div>
     </section>
