--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -13,6 +13,65 @@
     --grey: #aaa;
     --spacer: 2rem;
 }
+.ml-1 {
+    margin-left: 100px;
+}
+.mr-1{
+    margin-right: 100px;
+}
+
+.h-40 {
+    height: 400px;
+}
+
+.mt-1 {
+    margin-top: 80px;
+}
+
+.h-80 {
+    height: 800px;
+}
+
+/* Login */
+.form-card button {
+    padding: 15px 25px;
+    color: var(--white);
+    font-weight: 500;
+    background: var(--black);
+    outline: none;
+    border: none;
+    margin: 15px;
+    font-size: 14px;
+    letter-spacing: 2px;
+    cursor: pointer;
+    border-radius: 20px;
+}
+
+.login {
+    max-width: 1100px;
+    width: 60%;
+    display: flex;
+    align-items: center;
+}
+
+.form-card {
+    text-align: center;
+    padding: 20;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 10px;
+}
+
+.form-card input[type=text],.form-card input[type=password],.form-card input[type=email],.form-card input[type=date]  {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    border-radius: 20px;
+}
 
 body {
     font-family: "Poppins", sans-serif;
@@ -738,5 +797,19 @@ iframe {
     }
     .form .form-details input[type="text"] {
         margin-bottom: 0px;
+    }
+}
+
+@media(min-width: 301px) and (max-width: 768px) {
+    .logo {
+        display: none;
+    }
+    .form-card {
+        width: 100%;
+        text-align: center;
+        padding: 20;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 10px;
     }
 }
