--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -13,27 +13,8 @@
     --grey: #aaa;
     --spacer: 2rem;
 }
-.ml-1 {
-    margin-left: 100px;
-}
-.mr-1{
-    margin-right: 100px;
-}
 
-.h-40 {
-    height: 400px;
-}
-
-.mt-1 {
-    margin-top: 80px;
-}
-
-.h-80 {
-    height: 800px;
-}
-
-/* Login */
-.form-card button {
+.form-login button, .form-register button, .btn-reg {
     padding: 15px 25px;
     color: var(--white);
     font-weight: 500;
@@ -45,16 +26,24 @@
     letter-spacing: 2px;
     cursor: pointer;
     border-radius: 20px;
+    text-decoration: none;
 }
 
-.login {
+.login, .register {
     max-width: 1100px;
     width: 60%;
     display: flex;
-    align-items: center;
+    padding: 20px;
 }
 
-.form-card {
+.form-login a {
+    margin-top: 500px;
+}
+
+.form-login {
+    height: 400px;
+    margin-left: 100px;
+    margin-top: 40px;
     text-align: center;
     padding: 20;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -62,7 +51,29 @@
     border-radius: 10px;
 }
 
-.form-card input[type=text],.form-card input[type=password],.form-card input[type=email],.form-card input[type=date]  {
+.form-register {
+    text-align: center;
+    margin-right: 80px;
+    padding: 20;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 10px;
+    height: 850px;
+}
+
+.form-group {
+    text-align: left;
+    margin-top: 10px;
+}
+
+.form-login input[type=text],
+.form-register input[type=text],
+.form-login input[type=password],
+.form-register input[type=password],
+.form-login input[type=email],
+.form-register input[type=email],
+.form-login input[type=date],
+.form-register input[type=date] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -71,6 +82,7 @@
     border-radius: 4px;
     box-sizing: border-box;
     border-radius: 20px;
+    outline: none;
 }
 
 body {
@@ -779,6 +791,38 @@ iframe {
     .form .form-details input[type="text"] {
         margin-bottom: 0px;
     }
+
+    .logo {
+        height: 100%;
+        position: absolute;
+        top: 0;
+    }
+
+    .logo a img {
+        width: 150px;
+    }
+
+    .form-login {
+        width: 100%;
+        text-align: center;
+        padding: 20;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 10px;
+        margin-left: 0;
+    }
+
+    .form-register {
+        width: 100%;
+        margin-top: 30px;
+        position: relative;
+        text-align: center;
+        padding: 20;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 10px;
+    }
+    
 }
 
 @media(min-width: 501px) and (max-width: 768px) {
@@ -800,16 +844,40 @@ iframe {
     }
 }
 
-@media(min-width: 301px) and (max-width: 768px) {
+@media(min-width: 501px) and (max-width: 1068px) {
     .logo {
-        display: none;
+        height: 100%;
+        position: absolute;
+        top: 0;
     }
-    .form-card {
+
+    .logo a img {
+        width: 200px;
+    }
+
+    .form-login {
+        position: relative;
+        width: 100%;
+        text-align: center;
+        padding: 20px;
+        box-shadow: 0 4px 8px 0 rgba(21, 18, 18, 0.2);
+        transition: 0.3s;
+        border-radius: 10px;
+        margin-left: 0;
+    }
+
+    .form-register {
+        margin-top: 60px;
+        position: relative;
         width: 100%;
         text-align: center;
         padding: 20;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 10px;
+    }
+    
+    .form-group {
+        width: 500px;
     }
 }
