--- a/main/templates/main/login_register/register.html
+++ b/main/templates/main/login_register/register.html
@@ -7,25 +7,39 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    <div class="login container">
+    <div class="register container">
         <form action="" method="POST">
             <div class="form">
-                <div class="form-card mr-1 h-80">
+                <div class="form-register">
                     <h1>Register Account</h1>
-                    <label for="first_name">First Name</label>
-                    <input type="text" name="first_name" id="first_name" placeholder="First Name" required>
-                    <label for="last_name">Last Name</label>
-                    <input type="text" name="last_name" id="last_name" placeholder="Last Name" required>
-                    <label for="dob">Date of Birth</label>
-                    <input type="date" name="date_of_birth" id="dob" required>
-                    <label for="address">Address</label>
-                    <input type="text" name="address" id="address" placeholder="Address" required>
-                    <label for="contact">Contact</label>
-                    <input type="text" name="contact" id="contact" placeholder="Contact" required>
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" placeholder="Email" required>
-                    <label for="pass">Password</label>
-                    <input type="password" name="password" id="pass" placeholder="Password" required>
+                    <div class="form-group">
+                        <label for="first_name">First Name</label>
+                        <input type="text" name="first_name" id="first_name" placeholder="First Name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="last_name">Last Name</label>
+                        <input type="text" name="last_name" id="last_name" placeholder="Last Name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="dob">Date of Birth</label>
+                        <input type="date" name="date_of_birth" id="dob" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="address">Address</label>
+                        <input type="text" name="address" id="address" placeholder="Address" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="contact">Contact</label>
+                        <input type="text" name="contact" id="contact" placeholder="Contact" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email" placeholder="Email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="pass">Password</label>
+                        <input type="password" name="password" id="pass" placeholder="Password" required>
+                    </div>
                     <button>Register</button>
                     <hr>
                     <a href="{% url 'login' %}">Already have an account? Back to Login.</a>
