added login and registration functionality

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +11,10 @@
         .checked {
             color: orange;
         }
+
     </style>
 </head>
+
 <body>
     <section class=" top-txt ">
         <div class="head container ">
@@ -19,8 +22,12 @@
                 <p>Welcome to our customer ordering management system, were happy to serve you.</p>
             </div>
             <div class="sing_in_up ">
+                {% if user.is_authenticated %}
+                <a href="{% url 'logout' %}">LOG OUT</a>
+                {% else %}
                 <a href="{% url 'login' %}">SIGN IN</a>
                 <a href="{% url 'register' %}">SIGN UP</a>
+                {% endif %}
             </div>
         </div>
     </section>
@@ -57,7 +64,7 @@
         </div>
 
     </section>
-    
+
     <section id="collection">
         <div class="header">
             <h2>Food Category</h2>
@@ -121,7 +128,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -147,7 +154,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -173,7 +180,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -199,7 +206,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -225,25 +232,28 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-   
+
     <section id="contact">
         <div class="contact container">
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d973.1797431736345!2d123.87809846962472!3d12.666422207693135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33a0d7b6e4e3f599%3A0x3ab760e4ad620704!2sLEGIT%20BUSOG%20Yvonne&#39;s%20Food%20House!5e0!3m2!1sen!2sph!4v1693751930953!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d973.1797431736345!2d123.87809846962472!3d12.666422207693135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33a0d7b6e4e3f599%3A0x3ab760e4ad620704!2sLEGIT%20BUSOG%20Yvonne&#39;s%20Food%20House!5e0!3m2!1sen!2sph!4v1693751930953!5m2!1sen!2sph"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <form action="https://formspree.io/f/xzbowpjq" method="POST">
                 <div class="form">
                     <div class="form-txt">
                         <h4>INFORMATION</h4>
                         <h1>Contact Us</h1>
-                        <span>As you might expect of a our Restaurant. It's Located at listed bellow and for more info you can contact us.</span>
+                        <span>As you might expect of a our Restaurant. It's Located at listed bellow and for more info
+                            you can contact us.</span>
                         <h3>PH</h3>
                         <p>161 T. De Castro Street, Bulan, Sorsogon<br>+639275621240</p>
                         <h3>Philippines</h3>
@@ -252,7 +262,8 @@
                     <div class="form-details">
                         <input type="text" name="name" id="name" placeholder="Name" required>
                         <input type="email" name="email" id="email" placeholder="Email" required>
-                        <textarea name="message" id="message" cols="52" rows="7" placeholder="Message" required></textarea>
+                        <textarea name="message" id="message" cols="52" rows="7" placeholder="Message"
+                                  required></textarea>
                         <button>SEND MESSAGE</button>
                     </div>
                 </div>
@@ -268,4 +279,5 @@
     </footer>
     <script src="../static/js/script.js"></script>
 </body>
+
 </html>
