--- a/main/templates/main/login_register/login.html
+++ b/main/templates/main/login_register/login.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     {% load static %}
     <meta charset="UTF-8">
@@ -6,9 +7,24 @@
     <title>Login and Register Page</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
+
 <body>
+    <div class="container">
+        {% for message in messages %}
+        {% if message.tags == 'success' %}
+        <div class="alert alert-success" role="alert">
+            {{ message }}
+        </div>
+        {% elif message.tags == 'error' %}
+        <div class="alert alert-danger" role="alert">
+            {{ message }}
+        </div>
+        {% endif %}
+        {% endfor %}
+    </div>
     <div class="login container">
         <form action="" method="POST">
+            {% csrf_token %}
             <div class="form">
                 <div class="logo">
                     <a href="{% url 'index' %}"><img src="{% static 'img/logo.jpg' %}" alt=""></a>
@@ -16,8 +32,8 @@
                 <div class="form-login">
                     <h1>User Login</h1>
                     <div class="form-group">
-                        <label for="name">Username</label>
-                        <input type="text" name="username" id="name" placeholder="Username" required>
+                        <label for="name">Email</label>
+                        <input type="text" name="username" id="name" placeholder="Email" required>
                     </div>
                     <div class="form-group">
                         <label for="pass">Password</label>
@@ -26,10 +42,11 @@
                     <button>Login</button>
                     <hr>
                     <a href="{% url 'register' %}">Register</a>
-                    
+
                 </div>
             </div>
         </form>
     </div>
 </body>
+
 </html>
