Added layout for Admin and UI for Manage Menu

--- a/main/templates/main/login_register/login.html
+++ b/main/templates/main/login_register/login.html
@@ -1,7 +1,7 @@
+{% load static %}
 <html lang="en">
 
 <head>
-    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login and Register Page</title>
@@ -48,7 +48,7 @@
                                             <div class="col-12">
                                                 <label for="name">Username</label>
                                                 <div class="input-group">
-                                                    <div class="input-group-text rounded-pill"><i class="fa fa-envelope"></i></div>
+                                                    <div class="input-group-text rounded-pill"><i class="fa fa-user "></i></div>
                                                     <input type="email" name="username" placeholder="Input Email" class="form-control rounded-pill" id="name" required>
                                                     <div class="invalid-feedback">
                                                         Please provide a email.
