--- a/main/templates/main/customer-layout.html
+++ b/main/templates/main/customer-layout.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title></title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'vendor/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/css/animate.css' %}">
@@ -13,17 +12,10 @@
     <link rel="stylesheet" href="{% static 'vendor/css/style.css' %}">
 </head>
 <body>
-    <div id="global-loader">
+    <!-- <div id="global-loader">
         <div class="whirly-loader"> </div>
-    </div>
+    </div> -->
     {% block content %}
     {% endblock %}
-    <script src="{% static 'vendor/js/jquery-3.6.0.min.js' %}"></script>
-    <script src="{% static 'vendor/js/feather.min.js' %}"></script>
-    <script src="{% static 'vendor/js/jquery.slimscroll.min.js' %}"></script>
-    <script src="{% static 'vendor/js/jquery.dataTables.min.js' %}"></script>
-    <script src="{% static 'vendor/js/dataTables.bootstrap4.min.js' %}"></script>
-    <script src="{% static 'vendor/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'vendor/js/script.js' %}"></script>
 </body>
-</html>
+</html> 
