Refactor Categories, Foodlist UI and Bug on Delete, Added FeedbackUI and Changing function of category

--- a/main/templates/main/admin-layout.html
+++ b/main/templates/main/admin-layout.html
@@ -179,7 +179,7 @@
                         </li>
                         <li class=""><a href="{% url 'admin_cat_list' %}"><i class="me-2"
                                    data-feather="grid"></i><span>Manage Menu</span></a></li>
-                        <li class=""><a href=""><i class="me-2" data-feather="mail"></i><span>Feedback</span></a></li>
+                        <li class=""><a href="{% url 'admin_feedback_list' %}"><i class="me-2" data-feather="mail"></i><span>Feedback</span></a></li>
                         <li class=""><a href=""><i class="me-2" data-feather="users"></i><span>Users
                                     Managemet</span></a></li>
 
