--- a/main/templates/main/admin/foodcreate.html
+++ b/main/templates/main/admin/foodcreate.html
@@ -5,6 +5,20 @@ Edit
 {% endblock %}
 
 {% block stylesheets %}
+<style>
+.cat:focus {
+    border-color: #ff9f43;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6)
+}
+#id_image{
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
+</style>
 {% endblock stylesheets %}
 
 {% block content %}
@@ -31,7 +45,7 @@ Edit
                     <div class="col-lg-4 col-sm-6 col-12">
                         <div class="form-group">
                             <label>Category</label>
-                            <select class="select2" name="cat_id" class="form-control" required>
+                            <select class="select2 cat form-select" name="cat_id" required>
                                 <option disabled selected=""></option>
                                 <option value="Dish">Dish</option>
                                 <option value="Dessert">Dessert</option>
@@ -70,9 +84,9 @@ Edit
                         </table>
 
                     </div>
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 mt-2">
                         <button type="submit" class="btn btn-submit me-2">Save</button>
-                        <a href="" class="btn btn-cancel">Cancel</a>
+                        <a onclick="window.history.go(-1); return false;" class="btn btn-cancel">Cancel</a>
                     </div>
                 </div>
             </form>
