--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -80,7 +80,7 @@
             <div class="content">
                 <img src="{% static 'img/disert.jpg' %}" alt="img" />
                 <div class="img-content">
-                    <p>Disert</p>
+                    <p>Dessert</p>
                     <button><a href="#foods">SHOW NOW</a></button>
                 </div>
             </div>
