fixed bugs and added change password functionality

--- a/main/templates/main/admin/foodlist.html
+++ b/main/templates/main/admin/foodlist.html
@@ -63,7 +63,7 @@ List of Food
                                 </a>
                             </td>
                             <td>{{ f.name }}</td>
-                            <td>{{ f.category.category_name }}</td>
+                            <td>{{ f.category }}</td>
                             <td>{{ f.price}} PHP</td>
                             <td>
                                 {% if f.availability == True %}
