--- a/main/templates/main/admin-layout.html
+++ b/main/templates/main/admin-layout.html
@@ -47,8 +47,7 @@
                         <span class="user-img">
                             <span class="status online"></span>
                         </span>
-                        <small class="p-2"> Admin Fist Name</small>
-
+                        <small class="p-2">{{ user.first_name | title }} {{ user.last_name | title}}</small>
                     </a>
                     <div class="dropdown-menu menu-drop-user">
                         <div class="profilename">
@@ -59,19 +58,17 @@
                                     <img src="{% static 'img/admin.png' %}" alt="img">
                                     <span class="status online"></span></span>
                                 <div class="profilesets">
-                                    <h6>Admin Email</h6>
+                                    <h6>{{ user.email }}</h6>
                                     <h5>Administrator</h5>
                                 </div>
                             </div>
                             <hr class="m-0">
                             <a class="dropdown-item" href=""> <i class="me-2" data-feather="user"></i> My Profile</a>
-                            <a type="button" class="dropdown-item" data-bs-toggle="modal"
-                               data-bs-target="#changepassModal">
+                            <a type="button" class="dropdown-item" href="{% url 'change_password' %}">
                                 <i class="fa fa-key me-2"></i> Change Password
                             </a>
                             <hr class="m-0">
-                            <a class="dropdown-item logout pb-0" href="" onclick="event.preventDefault();
-                            document.getElementById('logout-form').submit();">Logout</a>
+                            <a class="dropdown-item logout pb-0" href="{% url 'logout' %}">Logout</a>
 
                             <!-- form para sa logout -->
                             <form id="logout-form" action="" method="POST" class="d-none">
@@ -89,8 +86,7 @@
                 <div class="dropdown-menu dropdown-menu-right">
                     <a class="dropdown-item" href="">My Profile</a>
                     <a class="dropdown-item" href="">Change Password</a>
-                    <a class="dropdown-item" href="#" onclick="event.preventDefault();
-                        document.getElementById('logout-form-mob').submit();">Logout</a>
+                    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
 
                     <!-- form para sa logout -->
                     <form id="logout-form-mob" action="" method="POST" class="d-none">
@@ -100,13 +96,14 @@
 
         </div>
 
-        <!-- Modal para sa pag palit password-->
-        <div class="modal fade" id="changepassModal" tabindex="-1" aria-labelledby="changepassModalLabel"
+        <!-- Modal para sa pag palit password
+        <div class="modal fade" id="changepassModal{{ user.id }}" tabindex="-1" aria-labelledby="changepassModalLabel"
              aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="form-validation">
                         <form action="" method="post" class="needs-validation">
+                            {% csrf_token %}
                             <div class="modal-header">
                                 <h5 class="modal-title" id="changepassModalLabel">Change Password</h5>
                             </div>
@@ -116,8 +113,7 @@
                                         Old Password
                                     </label>
                                     <div class="col-lg-12">
-                                        <input type="password" name="old_password" class="form-control" id="oldpass"
-                                               placeholder="Enter your current password.." required="">
+                                        {{ form.old_password }}
                                         <div class="invalid-feedback">
                                             Please enter your old password.
                                         </div>
@@ -128,8 +124,7 @@
                                         New Password
                                     </label>
                                     <div class="col-lg-12">
-                                        <input type="password" name="new_password" class="form-control" id="newpass"
-                                               placeholder="Enter your new password.." required="">
+                                        {{ form.new_password }}
                                         <div class="invalid-feedback">
                                             Please enter your new password.
                                         </div>
@@ -140,8 +135,7 @@
                                         Confirmation Password
                                     </label>
                                     <div class="col-lg-12">
-                                        <input type="password" name="new_password_confirmation" class="form-control"
-                                               id="conpass" placeholder="Enter your new password.." required="">
+                                        {{ form.new_password2 }}
                                         <div class="invalid-feedback">
                                             Please enter your new password.
                                         </div>
@@ -150,13 +144,14 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                <button type="submit" class="btn btn-primary">Save Changes</button>
+                                <a type="submit" href="{% url 'change_password' %}" class="btn btn-primary">Save
+                                    Changes</a>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- end modal -->
 
         <!-- start sidebar -->
@@ -179,7 +174,8 @@
                         </li>
                         <li class=""><a href="{% url 'admin_cat_list' %}"><i class="me-2"
                                    data-feather="grid"></i><span>Manage Menu</span></a></li>
-                        <li class=""><a href="{% url 'admin_feedback_list' %}"><i class="me-2" data-feather="mail"></i><span>Feedback</span></a></li>
+                        <li class=""><a href="{% url 'admin_feedback_list' %}"><i class="me-2"
+                                   data-feather="mail"></i><span>Feedback</span></a></li>
                         <li class=""><a href=""><i class="me-2" data-feather="users"></i><span>Users
                                     Managemet</span></a></li>
 
