--- a/main/templates/main/admin/foodcreate.html
+++ b/main/templates/main/admin/foodcreate.html
@@ -50,7 +50,7 @@ Add
                             <select class="select2 cat form-select" name="cat_id" required>
                                 <option disabled selected=""></option>
                                 {% for cat in cat_all %}
-                                <option value="{{ cat }}">{{ cat.category_name}}</option>
+                                <option value="{{ cat.category_name }}">{{ cat.category_name}}</option>
                                 {% endfor %}
                             </select>
                         </div>
@@ -71,7 +71,7 @@ Add
                     <div class="col-lg-6 col-sm-6 col-12">
                         <div class="form-group">
                             <label>Description</label>
-                            {{ form.description }}
+                            <textarea name="description" id="" cols="30" rows="10"></textarea>
 
                         </div>
                     </div>
