--- a/main/templates/main/admin/foodedit.html
+++ b/main/templates/main/admin/foodedit.html
@@ -49,7 +49,7 @@ Edit
                             <select class="select2 cat form-select" name="cat_id" class="form-control" required>
                                 <option selected value="{{food.category}}">{{ food.category }}</option>
                                 {% for c in cat %}
-                                <option value="{{ c }}">{{ c.category_name }}</option>
+                                <option value="{{ c.category_name }}">{{ c.category_name }}</option>
                                 {% endfor %}
                             </select>
                         </div>
@@ -70,7 +70,7 @@ Edit
                     <div class="col-lg-6 col-sm-6 col-12">
                         <div class="form-group">
                             <label>Description</label>
-                            {{ form.description }}
+                            <textarea name="description" id="" cols="30" rows="10">{{ food.description }}</textarea>
                         </div>
                     </div>
                     <div class="col-lg-6 col-sm-6 col-12">
