--- a/main/templates/main/login_register/login.html
+++ b/main/templates/main/login_register/login.html
@@ -48,7 +48,7 @@
                                             <div class="input-group">
                                                 <div class="input-group-text rounded-pill"><i class="fa fa-user "></i>
                                                 </div>
-                                                <input type="email" name="username" placeholder="Input Email"
+                                                <input type="text" name="username" placeholder="Input Email"
                                                        class="form-control rounded-pill" id="name" required>
                                                 <div class="invalid-feedback">
                                                     Please provide a email.
