--- a/main/templates/main/login_register/change_password.html
+++ b/main/templates/main/login_register/change_password.html
@@ -1,38 +1,139 @@
-<div class="form-validation">
-    <form action="" method="post" class="needs-validation">
-        {% csrf_token %}
-        <div class="modal-header">
-            <h5 class="modal-title" id="changepassModalLabel">Change Password</h5>
-        </div>
-        <div class="modal-body">
-            <div class="mb-3 row">
-                <label class="col-lg-12 col-form-label" for="oldpass">
-                    Old Password
-                </label>
-                <div class="col-lg-12">
-                    {{ form.old_password }}
-                </div>
+{% load static %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login and Register Page</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+</head>
+<style>
+    .mainDiv {
+        display: flex;
+        min-height: 100%;
+        align-items: center;
+        justify-content: center;
+        background-color: #f9f9f9;
+        font-family: 'Open Sans', sans-serif;
+    }
+    .cardStyle {
+        width: 500px;
+        border-color: white;
+        background: #fff;
+        padding: 36px 0;
+        border-radius: 4px;
+        margin: 30px 0;
+        box-shadow: 0px 0 2px 0 rgba(0,0,0,0.25);
+    }
+    #changepassLogo {
+        max-height: 100px;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+    }
+    .formTitle{
+        font-weight: 600;
+        margin-top: 20px;
+        color: #2F2D3B;
+        text-align: center;
+    }
+    .inputLabel {
+        font-size: 12px;
+        color: #555;
+        margin-bottom: 6px;
+        margin-top: 24px;
+    }
+    .inputDiv {
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+    }
+    input {
+        height: 40px;
+        font-size: 16px;
+        border-radius: 4px;
+        border: none;
+        border: solid 1px #ccc;
+        padding: 0 11px;
+    }
+    input:disabled {
+        cursor: not-allowed;
+        border: solid 1px #eee;
+    }
+    .buttonWrapper {
+        margin-top: 40px;
+    }
+    .submitButton {
+        width: 70%;
+        height: 40px;
+        margin: auto;
+        display: block;
+        color: #fff;
+        background-color: #065492;
+        border-color: #065492;
+        text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12);
+        box-shadow: 0 2px 0 rgba(0, 0, 0, 0.035);
+        border-radius: 4px;
+        font-size: 14px;
+        cursor: pointer;
+    }
+    .backButton {
+        width: 70%;
+        height: 40px;
+        margin: auto;
+        display: block;
+        color: #fff;
+        background-color: #171717;
+        border-color: #171717;
+        text-shadow: 0 -1px 0 rgb(255, 255, 255);
+        box-shadow: 0 2px 0 rgb(255, 255, 255);
+        border-radius: 4px;
+        font-size: 14px;
+        cursor: pointer;
+    }
+    .submitButton:disabled,
+    button[disabled] {
+        border: 1px solid #cccccc;
+        background-color: #cccccc;
+        color: #666666;
+    }
+</style>
+<body>
+<div class="mainDiv">
+    <div class="cardStyle">
+        <form action="" method="post" name="changeForm" id="changeForm">
+            {% csrf_token %}
+            <img src="" id="changepassLogo"/>
+            <h2 class="formTitle">
+                Change password
+            </h2>
+            <div class="inputDiv">
+                <label class="inputLabel" for="password">Current Password</label>
+                {{ form.old_password }}
             </div>
-            <div class="mb-3 row">
-                <label class="col-lg-12 col-form-label" for="newpass">
-                    New Password
-                </label>
-                <div class="col-lg-12">
-                    {{ form.new_password1 }}
-                </div>
+            <div class="inputDiv">
+                <label class="inputLabel" for="password">New Password</label>
+                {{ form.new_password1 }}
             </div>
-            <div class="mb-3 row">
-                <label class="col-lg-12 col-form-label" for="conpass">
-                    Confirmation Password
-                </label>
-                <div class="col-lg-12">
-                    {{ form.new_password2 }}
-                </div>
+            <div class="inputDiv">
+                <label class="inputLabel" for="confirmPassword">Confirm Password</label>
+                {{ form.new_password2 }}
             </div>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-primary">Save Changes</button>
-        </div>
-    </form>
+            
+            <div class="buttonWrapper">
+                <button type="submit" class="submitButton pure-button pure-button-primary mt-4 rounded-pill">
+                    <span>Continue</span>
+                </button>
+                <a onclick="window.history.go(-1); return false;" class="backButton pure-button pure-button-danger btn btn-cancel mt-2 rounded-pill">Back</a>
+            </div>
+        </form>
+    </div>
 </div>
+</html>
+<script>
+    document.getElementById('changepassLogo').src = "{% static 'img/logo.jpg' %}";
+</script>
