--- a/main/templates/main/admin/categorylist.html
+++ b/main/templates/main/admin/categorylist.html
@@ -65,6 +65,10 @@ Dashboard
                         <label>Food Category</label>
                         <input type="text" class="form-control" name="cat" required>
                     </div>
+                    <div class="form-group">
+                        <label>Photos Images:</label>
+                        {{ form }}
+                    </div>
                 </div>
                 <div class="modal-footer float-end">
                     <Button type="submit" class="btn btn-primary">Save</Button>
