--- a/main/templates/main/login_register/change_password.html
+++ b/main/templates/main/login_register/change_password.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <a class="btn btn-secondary" href="{% url 'admin.index' %}">Cancel</a>
             <button type="submit" class="btn btn-primary">Save Changes</button>
         </div>
     </form>
