[fix] bugs, [feat] added user management functionality, [refactor] models in person info

--- a/main/templates/main/admin-layout.html
+++ b/main/templates/main/admin-layout.html
@@ -171,7 +171,8 @@
                                    data-feather="grid"></i><span>Manage Menu</span></a></li>
                         <li class=""><a href="{% url 'admin_feedback_list' %}"><i class="me-2"
                                    data-feather="mail"></i><span>Feedback</span></a></li>
-                        <li class=""><a href="{% url 'admin_account_list' %}"><i class="me-2" data-feather="users"></i><span>Users
+                        <li class=""><a href="{% url 'admin_account_list' %}"><i class="me-2"
+                                   data-feather="users"></i><span>Users
                                     Managemet</span></a></li>
 
                     </ul>
