--- a/main/templates/main/admin/categorylist.html
+++ b/main/templates/main/admin/categorylist.html
@@ -55,9 +55,43 @@ Dashboard
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                             <li> <a class="dropdown-item" href="{% url 'admin_food_cat' c.id %}">View Product</a></li>
                             <li> <a class="dropdown-item" data-bs-toggle="modal" id="{{ c.id }}"
-                                   category="{{ c.category_name }}" data-bs-target="#editModal">Edit Category</a></li>
+                                   category="{{ c.category_name }}" data-bs-target="#editModal{{ c.id }}">Edit
+                                    Category</a></li>
                         </ul>
                     </div>
+                </div>
+            </div>
+        </div>
+        <!-- Edit Modal -->
+        <div class="modal fade" id="editModal{{ c.id }}">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <form action="{% url 'admin_cat_update' c.id %}" method="post" enctype="multipart/form-data"
+                          id="edit_frm">
+                        {% csrf_token %}
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Edit Category</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close">X</button>
+                        </div>
+                        <input type="hidden" name="id">
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label>Food Category</label>
+                                <input type="text" class="form-control" value="{{ c.category_name }}" name="cat"
+                                       required>
+                            </div>
+                            <div class="form-group">
+                                <label>Upload Image (Optional)</label>
+                                <p>Current: {{ c.img }}</p>
+                                <input type="file" class="form-control" name="image">
+                            </div>
+                        </div>
+                        <div class="modal-footer float-end">
+                            <Button type="submit" class="btn btn-primary">Update</Button>
+                            <a class="btn btn-cancel" data-bs-dismiss="modal" aria-label="Close">Cancel</a>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -67,7 +101,7 @@ Dashboard
 <div class="modal fade" id="add">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form method="post">
+            <form method="POST" enctype="multipart/form-data">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">New Category</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">X</button>
@@ -85,34 +119,6 @@ Dashboard
                 </div>
                 <div class="modal-footer float-end">
                     <Button type="submit" class="btn btn-primary">Save</Button>
-                    <a class="btn btn-cancel" data-bs-dismiss="modal" aria-label="Close">Cancel</a>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-<div class="modal fade" id="editModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <form action="{% url 'admin_cat_update' %}" method="post" id="edit_frm">
-                {% csrf_token %}
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Edit Category</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">X</button>
-                </div>
-                <input type="hidden" name="id">
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label>Food Category</label>
-                        <input type="text" class="form-control" name="cat" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Upload Image (Optional)</label>
-                        <input type="file" class="form-control" name="image">
-                    </div>
-                </div>
-                <div class="modal-footer float-end">
-                    <Button type="submit" class="btn btn-primary">Update</Button>
                     <a class="btn btn-cancel" data-bs-dismiss="modal" aria-label="Close">Cancel</a>
                 </div>
             </form>
